--- a/rush.yaml
+++ b/rush.yaml
@@ -95901,7 +95901,7 @@ name:
   it:
   pt:
   ja: マジェスティック・マスターバースト
-  ja_romaji:
+  ja_romaji: Majesutikku Masutābāsuto
   ko:
   ko_rr:
   zh-TW:
@@ -97497,7 +97497,7 @@ name:
   it:
   pt:
   ja: スター・リプレイサー
-  ja_romaji:
+  ja_romaji: Sutā Ripureisā
   ko:
   ko_rr:
   zh-TW:
@@ -97553,7 +97553,7 @@ name:
   it:
   pt:
   ja: スカイポーター・マックス
-  ja_romaji:
+  ja_romaji: Sukaipōtā Makkusu
   ko:
   ko_rr:
   zh-TW:
@@ -98863,7 +98863,7 @@ name:
   it:
   pt:
   ja: マッドレア・アクエラ
-  ja_romaji:
+  ja_romaji: Maddo Rea Akuera
   ko:
   ko_rr:
   zh-TW:
@@ -99348,3 +99348,54 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 933894
+---
+konami_id:
+name:
+  en: Vortex of Shattered Light
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>破<rt>は</rt></ruby><ruby>光<rt>こう</rt></ruby>の<ruby>渦<rt>うず</rt></ruby>
+  ja_romaji: Hakō no Uzu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a Level 8 or lower monster face-up, shuffle 3 LIGHT Attribute Spellcaster Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 of those Normal or Special Summoned monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: VortexofShatteredLight-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP065
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 934189
