--- a/rush.yaml
+++ b/rush.yaml
@@ -99409,7 +99409,7 @@ name:
   it:
   pt:
   ja: <ruby>幸<rt>しあわ</rt></ruby>せの<ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>使<rt>つか</rt></ruby>い ココッシュ
-  ja_romaji: Shiawase no Mahōtsukai - Kokosshu
+  ja_romaji: Shiawase no Mahōtsukai Kokosshu
   ko:
   ko_rr:
   zh-TW:
@@ -99433,11 +99433,11 @@ atk: 1400
 def: 700
 images:
 - index: 1
-  image: CocoshtheSpellcasterofHappiness-RDKP13-JP-OP.png
+  image: CocoshtheSpellcasterofHappiness-RDCOC1-JP-OP.png
 sets:
   ja:
   - set_number: RD/COC1-JPS01
-    set_name: Yu-Gi-Oh! x COCO's  Collaboration Campaign
+    set_name: Yu-Gi-Oh! x Coco's Collaboration Campaign
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 934251
