--- a/data/cards/81489939.yaml
+++ b/data/cards/81489939.yaml
@@ -37,7 +37,7 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
-  image: StygianDirge-DE04-JP-C.jpg
+  image: StygianDirge-LART-EN-UR-LE.png
   illustration: StygianDirge-TF05-JP-VG.png
 - index: '1.1'
   image: StygianDirge-DL16-EN-R-UE-Red.png
@@ -52,6 +52,10 @@ sets:
     set_name: Duelist League 16 participation cards
     rarities:
     - Rare
+  - set_number: LART-EN058
+    set_name: The Lost Art Promotion 2023 E
+    rarities:
+    - Ultra Rare
   de:
   - set_number: SOVR-DE078
     set_name: Stardust Overdrive
@@ -61,6 +65,10 @@ sets:
     set_name: Duelist League 16 participation cards
     rarities:
     - Rare
+  - set_number: LART-DE058
+    set_name: The Lost Art Promotion 2023 E
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: SOVR-FR078
     set_name: Stardust Overdrive
@@ -70,6 +78,10 @@ sets:
     set_name: Duelist League 16 participation cards
     rarities:
     - Rare
+  - set_number: LART-FR058
+    set_name: The Lost Art Promotion 2023 E
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SOVR-IT078
     set_name: Stardust Overdrive
@@ -79,11 +91,19 @@ sets:
     set_name: Duelist League 16 participation cards
     rarities:
     - Rare
+  - set_number: LART-IT058
+    set_name: The Lost Art Promotion 2023 E
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DL16-PT019
     set_name: Duelist League 16 participation cards
     rarities:
     - Rare
+  - set_number: LART-PT058
+    set_name: The Lost Art Promotion 2023 E
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SOVR-JP078
     set_name: Stardust Overdrive
