--- a/rush.yaml
+++ b/rush.yaml
@@ -101310,3 +101310,59 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 937021
+---
+konami_id:
+name:
+  en: Thestalos the Firestorm Monarch
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Tribute Summoned this card in Attack Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send 1 random card from your opponent's hand to the Graveyard. Then, if you sent a monster to the Graveyard by this effect, inflict damage to your opponent equal to [that monster's Level] x 100.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Pyro / Effect
+attribute: FIRE
+level: 6
+atk: 2400
+def: 1000
+legend: true
+images:
+- index: 1
+  image: ThestalostheFirestormMonarch-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/VC23-JP001
+    set_name: Jump Victory Carnival 2023 promotional card
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 937289
