--- a/data/rush/yugipedia938545.yaml
+++ b/data/rush/yugipedia938545.yaml
@@ -40,6 +40,7 @@ card_type: Spell
 property: Normal
 series:
 - Harpie
+- Signature move
 images:
 - index: 1
   image: TriangleEcstasySpark-RDTB01-JP-OP.png
