--- a/data/rush/16900.yaml
+++ b/data/rush/16900.yaml
@@ -1,6 +1,6 @@
 konami_id: 16900
 name:
-  en: Sevens Paladin the Magical Knight
+  en: Sevens Paladin
   de:
   es:
   fr:
@@ -65,7 +65,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: SevensPaladintheMagicalKnight-RDEXT1-JP-UR.png
+  image: SevensPaladin-RDEXT1-JP-UR.png
 sets:
   ja:
   - set_number: RD/EXT1-JP015
