--- a/data/rush/17008.yaml
+++ b/data/rush/17008.yaml
@@ -1,6 +1,6 @@
 konami_id: 17008
 name:
-  en: Supreme HQ Magnum Overbase
+  en: Supreme Marine Fortress Magnum Overbase
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: SupremeHQMagnumOverbase-RDVSP1-JP-C.png
+  image: SupremeMarineFortressMagnumOverbase-RDVSP1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP042
