--- a/data/rush/17283.yaml
+++ b/data/rush/17283.yaml
@@ -1,6 +1,6 @@
 konami_id: 17283
 name:
-  en: Lanterncoilfish
+  en: Anglercoilfish
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: Lanterncoilfish-RDKP08-JP-R.png
+  image: Anglercoilfish-RDKP08-JP-R.png
 sets:
   ja:
   - set_number: RD/KP08-JP007
