--- a/data/rush/17316.yaml
+++ b/data/rush/17316.yaml
@@ -48,7 +48,7 @@ atk: 2600
 def: 1800
 materials:
   en: |-
-    "Lanterncoilfish" + "Pluggyfish"
+    "Anglercoilfish" + "Pluggyfish"
   de:
   es:
   fr:
