--- a/rush.yaml
+++ b/rush.yaml
@@ -49355,7 +49355,7 @@ yugipedia_page_id: 714935
 ---
 konami_id: 17008
 name:
-  en: Supreme HQ Magnum Overbase
+  en: Supreme Marine Fortress Magnum Overbase
   de:
   es:
   fr:
@@ -49399,7 +49399,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: SupremeHQMagnumOverbase-RDVSP1-JP-C.png
+  image: SupremeMarineFortressMagnumOverbase-RDVSP1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP042
@@ -53845,7 +53845,7 @@ yugipedia_page_id: 716240
 ---
 konami_id: 17283
 name:
-  en: Lanterncoilfish
+  en: Anglercoilfish
   de:
   es:
   fr:
@@ -53879,7 +53879,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: Lanterncoilfish-RDKP08-JP-R.png
+  image: Anglercoilfish-RDKP08-JP-R.png
 sets:
   ja:
   - set_number: RD/KP08-JP007
@@ -56149,7 +56149,7 @@ atk: 2600
 def: 1800
 materials:
   en: |-
-    "Lanterncoilfish" + "Pluggyfish"
+    "Anglercoilfish" + "Pluggyfish"
   de:
   es:
   fr:
