--- a/rush.yaml
+++ b/rush.yaml
@@ -51439,7 +51439,7 @@ yugipedia_page_id: 713316
 ---
 konami_id: 17203
 name:
-  en: Infinidream Constructor Wyrm Buildrim
+  en: Infinite Constructor Wyrm Buildream
   de:
   es:
   fr:
@@ -51503,7 +51503,7 @@ series:
 - Constructor
 images:
 - index: 1
-  image: InfinidreamConstructorWyrmBuildrim-RDGRP1-JP-UR.png
+  image: InfiniteConstructorWyrmBuildream-RDGRP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/GRP1-JP014
