--- a/rush.yaml
+++ b/rush.yaml
@@ -71,6 +71,8 @@ images:
 - index: 5
   image: SevensRoadMagician-RDORP1-JP-ORR.png
   illustration: SevensRoadMagician-G002-JP-VG-artwork-3.png
+- index: 6
+  image: SevensRoadMagician-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ST01-JP001
@@ -1094,6 +1096,8 @@ images:
   image: MultistrikeDragonDragias-RDAKG2-JP-UR.png
 - index: 3
   image: MultistrikeDragonDragias-RDKP12-JP-ORR.png
+- index: 4
+  image: MultistrikeDragonDragias-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ST02-JP001
@@ -3039,6 +3043,12 @@ series:
 images:
 - index: 1
   image: PrimaGuitarnatheShiningSuperstar-RDMRP1-JP-C.png
+  illustration: PrimaGuitarnatheShiningSuperstar-DBR-JP-VG-artwork.png
+- index: '1.1'
+  image: PrimaGuitarnatheShiningSuperstar-RDKP01-KR-UR.png
+  illustration: PrimaGuitarnatheShiningSuperstar-DBR-EN-VG-artwork.png
+- index: 2
+  image: PrimaGuitarnatheShiningSuperstar-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP01-JP028
@@ -43623,7 +43633,7 @@ yugipedia_page_id: 715545
 ---
 konami_id: 16904
 name:
-  en: Mr. Alche
+  en: Mr. Alchemy
   de:
   es:
   fr:
@@ -43671,7 +43681,7 @@ atk: 100
 def: 500
 images:
 - index: 1
-  image: MrAlche-RDEXT1-JP-C.png
+  image: MrAlchemy-RDEXT1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP020
@@ -61891,7 +61901,7 @@ yugipedia_page_id: 715659
 ---
 konami_id: 17543
 name:
-  en: Card Reprint
+  en: Card Reprinting
   de:
   es:
   fr:
@@ -61935,7 +61945,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: CardReprint-RDLGP1-JP-C.png
+  image: CardReprinting-RDLGP1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP057
@@ -101028,7 +101038,7 @@ atk: 3000
 def: 3000
 materials:
   en: |-
-    "Digisoon the Music Fiend" + "Contacton the Music Princess"
+    "Digisoon the Music Fiend" + "Boton the Music Princess"
   de:
   es:
   fr:
@@ -101098,7 +101108,7 @@ atk: 2900
 def: 2900
 materials:
   en: |-
-    "Ensembullfighter the Music Fiend" + "Contacton the Music Princess"
+    "Ensembullfighter the Music Fiend" + "Boton the Music Princess"
   de:
   es:
   fr:
@@ -101180,7 +101190,7 @@ yugipedia_page_id: 937018
 ---
 konami_id:
 name:
-  en: Music Princess's Requiem Sonata
+  en: Music Princess's Requiem
   de:
   es:
   fr:
@@ -101222,7 +101232,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: MusicPrincesssRequiemSonata-RDTB01-JP-OP.png
+  image: MusicPrincesssRequiem-RDTB01-JP-OP.png
 sets:
   ja:
   - set_number: RD/TB01-JP034
@@ -101278,7 +101288,7 @@ yugipedia_page_id: 937020
 ---
 konami_id:
 name:
-  en: Contacton the Music Princess
+  en: Boton the Music Princess
   de:
   es:
   fr:
@@ -101312,7 +101322,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: ContactontheMusicPrincess-RDTB01-JP-OP.png
+  image: BotontheMusicPrincess-RDTB01-JP-OP.png
 sets:
   ja:
   - set_number: RD/TB01-JP031
