--- a/rush.yaml
+++ b/rush.yaml
@@ -64804,6 +64804,8 @@ def: 0
 images:
 - index: 1
   image: Tamabot-RDSD02-JP-C.png
+- index: 2
+  image: Tamabot-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/GRD2-JP023
@@ -87216,7 +87218,7 @@ images:
 - index: 1
   image: WidespreadRuin-RD23PR-JP-NPR.png
 - index: 2
-  image: WidespreadRuin-RDB224-JP-OP.png
+  image: WidespreadRuin-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/23PR-JP005
@@ -91973,7 +91975,7 @@ atk: 2000
 def: 1500
 images:
 - index: 1
-  image: RuthlessSlashMegaplunder-RDDEC1-JP-OP.png
+  image: RuthlessSlashMegaplunder-RDDEC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/DEC1-JP001
@@ -92032,7 +92034,7 @@ series:
 - Shaman Bandit
 images:
 - index: 1
-  image: PlectcrimeoftheDeadlyDirge-RDSJMP-JP-OP.png
+  image: PlectcrimeoftheDeadlyDirge-RDSJMP-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP025
@@ -96452,7 +96454,7 @@ atk: 0
 def: 0
 images:
 - index: 1
-  image: Soitsu-RDB231-JP-OP.png
+  image: Soitsu-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/B231-JP008
@@ -96549,7 +96551,7 @@ card_type: Spell
 property: Equip
 images:
 - index: 1
-  image: LegendarySword-RDB231-JP-OP.png
+  image: LegendarySword-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/B231-JP010
