--- a/rush.yaml
+++ b/rush.yaml
@@ -99250,7 +99250,7 @@ effect_types:
 effect:
   en: |-
     ● This card gains ATK equal to [the number of cards in both players' Spell & Trap Zones] x 500 until the end of this turn.
-    ● This turn, this card cannot be destroyed by your opponent's card effects. Also, you can destroy face-up cards on your opponent's field, up to [the number of cards in your Spell & Trap Zone].
+    ● This turn, this card cannot be destroyed by your opponent's card effects. Then, you can destroy face-up cards on your opponent's field, up to [the number of cards in your Spell & Trap Zone].
   de:
   es:
   fr:
