--- a/data/rush/17966.yaml
+++ b/data/rush/17966.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 face-up monster on your opponent's field to face-down Defense Position. This card gains 500 ATK until the end of this turn. Also, if you sent a monster to the Graveyard to meet the requirement, this card cannot be destroyed by your opponent's Trap Card effects this turn.
+    Change 1 face-up monster on your opponent's field to face-down Defense Position. This card gains 500 ATK until the end of this turn. Then, if you sent a monster to the Graveyard to meet the requirement, this card cannot be destroyed by your opponent's Trap Card effects this turn.
   de:
   es:
   fr:
