--- a/data/rush/18267.yaml
+++ b/data/rush/18267.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card cannot be destroyed by your opponent's Trap Card effects. Also, if you sent a Plant Type monster to the Graveyard to meet the requirement, this card gains 700 ATK until the end of this turn.
+    This turn, this card cannot be destroyed by your opponent's Trap Card effects. Then, if you sent a Plant Type monster to the Graveyard to meet the requirement, this card gains 700 ATK until the end of this turn.
   de:
   es:
   fr:
