--- a/data/rush/18354.yaml
+++ b/data/rush/18354.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Level 5 or higher Machine Type monster on your field. This turn, that monster cannot be destroyed by your opponent's Trap Card effects. Also, if that monster is LIGHT Attribute, draw 1 card.
+    Choose 1 face-up Level 5 or higher Machine Type monster on your field. This turn, that monster cannot be destroyed by your opponent's Trap Card effects. Then, if that monster is LIGHT Attribute, draw 1 card.
   de:
   es:
   fr:
