--- a/data/rush/18694.yaml
+++ b/data/rush/18694.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. If at least 1 of the results is heads, this card can attack twice this turn. Also, if 3 of the results are heads, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
+    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. If at least 1 of the results is heads, this card can attack twice this turn. Then, if 3 of the results are heads, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
   de:
   es:
   fr:
