--- a/data/rush/18766.yaml
+++ b/data/rush/18766.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Also, you can add 1 Level 10 Maximum Monster, "Supreme Electromagnetic Maximum", or "B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
+    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Then, you can add 1 Level 10 Maximum Monster, "Supreme Electromagnetic Maximum", or "B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
   de:
   es:
   fr:
