--- a/data/rush/18783.yaml
+++ b/data/rush/18783.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Sea Serpent Type monster on your field gains 1000 ATK until the end of this turn, and you gain 1000 LP. Also, if that monster is a Maximum Monster, it cannot be destroyed by battle or your opponent's card effects this turn.
+    1 face-up Sea Serpent Type monster on your field gains 1000 ATK until the end of this turn, and you gain 1000 LP. Then, if that monster is a Maximum Monster, it cannot be destroyed by battle or your opponent's card effects this turn.
   de:
   es:
   fr:
