--- a/rush.yaml
+++ b/rush.yaml
@@ -96625,6 +96625,50 @@ sets:
     - Common
 yugipedia_page_id: 901240
 ---
+konami_id: 18900
+name:
+  en: Cocosh the Spellcaster of Happiness
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幸<rt>しあわ</rt></ruby>せの<ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>使<rt>つか</rt></ruby>い ココッシュ
+  ja_romaji: Shiawase no Mahōtsukai Kokosshu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A spellcaster with a warm and genial heart that makes people around the world smile with her legendary magic, "Danish", that combines many arts and techniques. For her achievements, she's been given the title "Coco". She has a somewhat playful side, as she loves to dote on her companion "Maple".
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    多くの術式を重ね合わせる伝説の魔法「デニッシュ」で世界中の人々を笑顔にする、温かな心を持った魔法使い。その功績が称えられ「ココ」の称号が授けられた。お供の「メイプル」を溺愛するお茶目な一面も。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Normal
+attribute: LIGHT
+level: 4
+atk: 1400
+def: 700
+images:
+- index: 1
+  image: CocoshtheSpellcasterofHappiness-RDCCC1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/CCC1-JPS01
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 934251
+---
 konami_id: 18907
 name:
   en: Satellite Soldier
@@ -100750,48 +100794,6 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 932073
----
-konami_id:
-name:
-  en: Cocosh the Spellcaster of Happiness
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: <ruby>幸<rt>しあわ</rt></ruby>せの<ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>使<rt>つか</rt></ruby>い ココッシュ
-  ja_romaji: Shiawase no Mahōtsukai Kokosshu
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en:
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Spellcaster / Normal
-attribute: LIGHT
-level: 4
-atk: 1400
-def: 700
-images:
-- index: 1
-  image: CocoshtheSpellcasterofHappiness-RDCCC1-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/CCC1-JPS01
-    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
-    rarities:
-    - Normal Parallel Rare
-yugipedia_page_id: 934251
 ---
 konami_id:
 name:
