--- a/data/cards/yugipedia977106.yaml
+++ b/data/cards/yugipedia977106.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 FIRE monsters
-    Face-up Spells/Traps you control cannot be destroyed by your opponent's effects. You can target 1 of your banished FIRE monsters; add it to your hand, and if you do, you cannot activate the effects of cards with that name for the rest of this turn. You can only use this effect of "Flametongue the Blazing Magical Blade" once per turn.
+    Face-up Spells/Traps you control cannot be destroyed by your opponent's card effects. You can target 1 of your banished FIRE monsters; add it to your hand, and if you do, you cannot activate cards, or the effects of cards, with that name for the rest of this turn. You can only use this effect of "Flametongue the Blazing Magical Blade" once per turn.
   de:
   es:
   fr:
