--- a/rush.yaml
+++ b/rush.yaml
@@ -70101,7 +70101,7 @@ sets:
   - set_number: RD/KP10-JP010
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
     rarities:
-    - Common
+    - Rare
   ko:
   - set_number: RD/KP10-KR010
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
