--- a/data/cards/yugipedia977106.yaml
+++ b/data/cards/yugipedia977106.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 炎魔刃フレイムタン
-  ja_romaji:
+  ja: <ruby>炎<rt>えん</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>刃<rt>じん</rt></ruby>フレイムタン
+  ja_romaji: Enmajin Fureimutan
   ko:
   ko_rr:
   zh-TW:
@@ -33,6 +33,7 @@ link_arrows:
 - ↙
 - ↘
 atk: 1400
+materials: 2 FIRE monsters
 images:
 - index: 1
   image: FlametonguetheBlazingMagicalBlade-YO07-JP-OP.png
