--- a/data/cards/36378213.yaml
+++ b/data/cards/36378213.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Cuando un monstruo que incluya "roid" en su nombre sea añadido de tu Cementerio a tu mano, puedes Invocarlo mediante una Invocación Especial.
   fr: |-
-    Lorsqu'un monstre qui inclut "roid" dans son nom de carte est ajouté à votre main depuis votre Cimetière, vous pouvez faire l'invocation Spéciale de ce monstre.
+    Lorsqu’un ou plusieurs monstres “roid” sont ajoutés depuis votre Cimetière à votre main (sauf durant la Damage Step) : vous pouvez les Invoquer Spécialement.
   it: |-
     Quando un mostro che include "roid" nel suo nome viene aggiunto dal tuo Cimitero alla tua mano, puoi Evocare tramite Evocazione Speciale quel mostro.
   pt: |-
