--- a/data/cards/50684552.yaml
+++ b/data/cards/50684552.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Cuando esta carta boca abajo es destruida y mandada al Cementerio, puedes Invocar mediante una Invocación Especial de tu mano 1 monstruo de Tipo Máquina de Nivel 4 o menor que incluya "roid" en su nombre.
   fr: |-
-    Lorsque cette carte face verso est détruite et envoyée au Cimetière, vous pouvez faire l'Invocation Spéciale depuis votre main d'1 monstre de Niveau 4 ou moins de Type Machine qui inclut "roid" dans son nom de carte.
+    Lorsque cette carte Posée est détruite et envoyée au Cimetière : vous pouvez Invoquer Spécialement 1 monstre "roid" Machine de max. Niveau 4 depuis votre main.
   it: |-
     Quando questa carta coperta viene distrutta e mandata al Cimitero puoi Evocare tramite Evocazione Speciale dalla tua mano 1 mostro di Livello 4 o inferiore di Tipo Macchina e che include "roid" nel suo nome.
   pt: |-
