--- a/rush.yaml
+++ b/rush.yaml
@@ -102824,3 +102824,55 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 975603
+---
+konami_id:
+name:
+  en: Excutie Riding!
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・ライディング！
+  ja_romaji: Ekusukyūtī Raidingu!
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: ???
+property: ???
+series:
+- Excutie
+images:
+- index: 1
+  image: ExcutieRiding-OW.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP0??
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+yugipedia_page_id: 978511
