--- a/rush.yaml
+++ b/rush.yaml
@@ -101199,7 +101199,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If a card is in a Field Zone, send 2 cards from your hand to the Graveyard, including a a Wyrm Type monster.
+    If a card is in a Field Zone, send 2 cards from your hand to the Graveyard, including a Wyrm Type monster.
   de:
   es:
   fr:
@@ -102738,44 +102738,6 @@ yugipedia_page_id: 975422
 ---
 konami_id:
 name:
-  en: Cat-trois Choice
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: キャットロワ チョイス
-  ja_romaji: Kyattorowa Choisu
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    [TBA]
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: ???
-property: ???
-images:
-- index: 1
-  image: CattroisChoice-OW.png
-sets:
-  ja:
-  - set_number: RD/KP14-JP0??
-    set_name: Phoenix of the Roaring Flame
-    rarities:
-yugipedia_page_id: 975588
----
-konami_id:
-name:
   en: Giant Tiger Strike
   de:
   es:
@@ -102824,55 +102786,3 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 975603
----
-konami_id:
-name:
-  en: Excutie Riding!
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: エクスキューティー・ライディング！
-  ja_romaji: Ekusukyūtī Raidingu!
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    (TBA)
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    (TBA)
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: ???
-property: ???
-series:
-- Excutie
-images:
-- index: 1
-  image: ExcutieRiding-OW.png
-sets:
-  ja:
-  - set_number: RD/KP14-JP0??
-    set_name: Phoenix of the Roaring Flame
-    rarities:
-yugipedia_page_id: 978511
