--- a/data/cards/yugipedia975638.yaml
+++ b/data/cards/yugipedia975638.yaml
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：デッキからレベル４以下の炎族モンスター１体を手札に加える。
   ko:
   zh-TW:
   zh-CN:
