--- a/data/cards/yugipedia978653.yaml
+++ b/data/cards/yugipedia978653.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>世<rt>せ</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>挽<rt>ばん</rt></ruby><ruby>歌<rt>か</rt></ruby>
-  ja_romaji: Sekai Banka
+  ja_romaji: Sekaibanka
   ko:
   ko_rr:
   zh-TW:
