--- a/data/cards/yugipedia978654.yaml
+++ b/data/cards/yugipedia978654.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>世<rt>せ</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>賛<rt>さん</rt></ruby><ruby>歌<rt>か</rt></ruby>
-  ja_romaji: Sekai Sanka
+  ja_romaji: Sekaisanka
   ko:
   ko_rr:
   zh-TW:
