--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Transform (OCG+TCG)
         working-directory: yaml-yugi/data/cards
         run: |
-          git rm --ignore-unmatch kdb*.json kdb*.yaml yugipedia*.yaml yugipedia*.yaml
+          git rm --ignore-unmatch kdb*.json kdb*.yaml yugipedia*.json yugipedia*.yaml
           python3 ../../src/main_ocgtcg.py \
             ../../../yaml-yugipedia/wikitext/cards \
             --zh-CN ../../../yaml-yugi-zh/zh-CN \
