--- a/rush.yaml
+++ b/rush.yaml
@@ -102843,3 +102843,163 @@ sets:
     rarities:
     - Super Rare
 yugipedia_page_id: 978678
+---
+konami_id:
+name:
+  en: Music Princess's Dance
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>楽<rt>がっ</rt></ruby><ruby>姫<rt>き</rt></ruby>の<ruby>演<rt>えん</rt></ruby><ruby>舞<rt>ぶ</rt></ruby>
+  ja_romaji: Gakki no Enbu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 5 or more WIND Attribute Warrior Type monsters in your Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Fusion Summon a WIND Attribute Warrior Type monster by shuffling monsters from your hand and/or Graveyard into the Deck as material.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Music Princess
+images:
+- index: 1
+  image: MusicPrincesssDance-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP033
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Super Rare
+    - Over Rush Rare
+yugipedia_page_id: 978976
+---
+konami_id:
+name:
+  en: Demolition Sword Constructedea
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>剣<rt>けん</rt></ruby>チクエディア
+  ja_romaji: Genkaiken Chikuedia
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up Wyrm Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains 500 ATK. Also, if you have 5 or more Wyrm Type monsters in your Graveyard, the equipped monster gains 500 more ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionSwordConstructedea-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP051
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 978987
+---
+konami_id:
+name:
+  en: Demolition Barricade
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>壁<rt>へき</rt></ruby><ruby>礫<rt>れき</rt></ruby>
+  ja_romaji: Genkai Hekireki
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's Level 8 or lower monster declares an attack while you have a face-up Level 7 or higher Wyrm Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Negate the attack. This turn, your opponent cannot attack with Level 7 or lower monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionBarricade-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP057
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 978989
