--- a/data/cards/90884403.yaml
+++ b/data/cards/90884403.yaml
@@ -8,7 +8,7 @@ name:
   it: Signore Fantasma Ultimitl Bishbaalkin
   pt: Senhor Fantasmal Bishbaalkin Ultimitl
   ja: <ruby>究<rt>きゅう</rt></ruby><ruby>極<rt>きょく</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>神<rt>しん</rt></ruby> アルティミトル・ビシバールキン
-  ja_romaji: Kyūkyoku Genshin Arutimitoru Bishibārukin
+  ja_romaji: Kyūkyokugenshin Arutimitoru Bishibārukin
   ko: 궁극환신 얼티메틀 비시바르킨
   ko_rr:
   zh-TW:
