--- a/data/cards/yugipedia984310.yaml
+++ b/data/cards/yugipedia984310.yaml
@@ -7,15 +7,15 @@ name:
   fr:
   it:
   pt:
-  ja: 溟界神－ネフェルアビス
-  ja_romaji:
+  ja: <ruby>溟<rt>めい</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>神<rt>しん</rt></ruby>－ネフェルアビス
+  ja_romaji: Meikaishin - Neferuabisu
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    If a monster(s) is sent from the hand or Deck to the GY while this card is in your GY: You can Special Summon this card, also you cannot Special Summon monsters until the end of the next turn, except Reptile monsters. If you control this card that was Special Summoned from the GY: You can target 1 monster in your GY, except "Neferabyss, the Ogdoadic Overlord"; Special Summon it. You can only use each effect of "Neferabyss, the Ogdoadic Overlord" once per turn.
+    If a monster(s) is sent from the hand and/or Deck to the GY while this card is in your GY: You can Special Summon this card, also you cannot Special Summon monsters until the end of the next turn, except Reptile monsters. If you control this card that was Special Summoned from the GY: You can target 1 monster in your GY, except "Neferabyss, the Ogdoadic Overlord"; Special Summon it. You can only use each effect of "Neferabyss, the Ogdoadic Overlord" once per turn.
   de:
   es:
   fr:
@@ -32,6 +32,7 @@ level: 10
 atk: 2200
 def: 3100
 series:
+- Abyss-
 - Ogdoadic
 images:
 - index: 1
