--- a/data/cards/yugipedia984311.yaml
+++ b/data/cards/yugipedia984311.yaml
@@ -7,15 +7,15 @@ name:
   fr:
   it:
   pt:
-  ja: 黎溟界闢
-  ja_romaji:
+  ja: <ruby>黎<rt>れい</rt></ruby><ruby>溟<rt>めい</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>闢<rt>びゃく</rt></ruby>
+  ja_romaji: Reimeikaibyaku
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    Tribute 1 Reptile monster; Special Summon up to 1 "Ogdoadic Token"  (Reptile/DARK/Level 2/ATK 0/DEF 0) for every 2 Levels the Tributed monster had on the field. During your Main Phase: You can banish this card from your GY, then target 1 of your banished Reptile monsters; shuffle it into the Deck, then you can send 1 Reptile monsters form your Deck to the GY. You can only use each effect of "Ogdoadic Dawn of Creation" once per turn.
+    Tribute 1 Reptile monster; Special Summon up to 1 "Ogdoadic Token" (Reptile/DARK/Level 2/ATK 0/DEF 0) for every 2 Levels the Tributed monster had on the field. During your Main Phase: You can banish this card from your GY, then target 1 of your banished Reptile monsters; shuffle it into the Deck, then you can send 1 Reptile monster from your Deck to the GY. You can only use each effect of "Ogdoadic Dawn of Creation" once per turn.
   de:
   es:
   fr:
