--- a/rush.yaml
+++ b/rush.yaml
@@ -103196,3 +103196,212 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 980620
+---
+konami_id:
+name:
+  en: Tiger Doom Sight
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>虎<rt>こ</rt></ruby><ruby>死<rt>し</rt></ruby><ruby>眈<rt>たん</rt></ruby><ruby>々<rt>たん</rt></ruby>
+  ja_romaji: Koshitantan
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack while you have a face-up Level 7 or higher WIND Attribute Warrior or Beast Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change the attacking monster to face-up Defense Position. Then, if your LP are less than or equal to your opponent's, you can destroy 1 Attack Position monster on your opponent's field. Then, inflict damage to your opponent equal to [the original ATK of the monster destroyed by this effect].
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: TigerDoomSight-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP035
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Secret Rare
+yugipedia_page_id: 986104
+---
+konami_id:
+name:
+  en: Icarus Attack
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster, or after your opponent activates a Spell Card, send 1 face-up Winged Beast Type monster from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy up to 2 cards on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+legend: true
+images:
+- index: 1
+  image: IcarusAttack-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP065
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Secret Rare
+yugipedia_page_id: 986105
+---
+konami_id:
+name:
+  en: Harpie's Feather Tempest
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハーピィの<ruby>羽<rt>は</rt></ruby><ruby>根<rt>ね</rt></ruby><ruby>嵐<rt>あらし</rt></ruby>
+  ja_romaji: Hāpyi no Hanearashi
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal Summons a monster, shuffle 2 "Harpie Lady" and/or "Harpie Ladies" from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy that Normal Summoned monster. Then, if you shuffled a Normal Monster into the Deck to meet the requirement, you can change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpiesFeatherTempest-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP016
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 986108
+---
+konami_id:
+name:
+  en: Demolition Art - Absolute Destruction
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>奥<rt>おう</rt></ruby><ruby>義<rt>ぎ</rt></ruby>－<ruby>一<rt>いっ</rt></ruby><ruby>式<rt>しき</rt></ruby><ruby>攻<rt>こう</rt></ruby><ruby>事<rt>じ</rt></ruby>
+  ja_romaji: Genkai Ōgi - Isshikikōji
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle up to 6 Wyrm Type monsters from your Graveyard into the Deck. Then, if [the total Levels of the monsters shuffled by this effect] is 16 or higher, you can destroy all Attack Position monsters on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionArtAbsoluteDestruction-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP058
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Secret Rare
+yugipedia_page_id: 986110
